Several implementations and fixes.
Improved legibility of js code.
Implemented AJAX to prevent refreshing.
Implemented retrieval of previous data from API on window load. Involved creating new API route and modify the existing ones.
implemented utf-8 coding.
Implemented error handling with promises.
Non recognized speech returns status error 400.
Phrases displayed on button.
phrases now have randomized style.
Phrases removed on click from display.
Text to Speech
TODO:
CSS and JS files flask render to avoid using live server since it refreshes html page when txt file is saved.

--- a/WebPage/custom.css
+++ b/WebPage/custom.css
@@ -31,7 +31,16 @@
     
 }
 .texto{
+    background: transparent;
+    border: none !important;
     margin-right: 5vw; 
-    font-family: 'Times New Roman';
+}
+.texto:hover{
     
+    
+    margin-right: 5vw; 
+    background-color: rgb(241, 239, 239);
+    border-radius: 25px;
+    color: red !important;
+    border: 2px solid red !important; 
 }
