--- a/API_WEB/Main_Directory/templates/index.html
+++ b/API_WEB/Main_Directory/templates/index.html
@@ -7,17 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/custom.css">
     
-    
-    <title>Test</title>
+    <title>¿Qué es ser ITC?</title>
 </head>
 <body>
 
-    <div id="TitleBar" class="container-fluid" >
-        <p id="TitleTxt">¿Qué es para ti ser un ITC?</p>
-    </div>
-
-    <div id="btnSection" class="container-fluid">
-        <button id="AddPhraseBtn" type="button" class="btn btn-primary">Agregar frase</button>
+    <div class="fixed-top container-fluid bg-dark text-center">
+        <div id="TitleBar">
+            <p id="TitleTxt">¿Qué es para ti ser un ITC?</p>
+        </div>
+        <div id="btnSection">
+            <button id="AddPhraseBtn" type="button" class="btn btn-dark">Agrega una frase</button>
+        </div> 
     </div>
 
     <div id="PhraseContainer"class="container">
