Cambios a la navbar

--- a/API_WEB/Main_Directory/templates/index.html
+++ b/API_WEB/Main_Directory/templates/index.html
@@ -16,11 +16,11 @@
             <p id="TitleTxt">¿Qué es para ti ser un ITC?</p>
         </div>
         <div id="btnSection">
-            <button id="AddPhraseBtn" type="button" class="btn btn-dark">Agrega una frase</button>
+            <button id="Add PhraseBtn" type="button" class="btn btn-dark">Agrega una frase</button>
         </div> 
     </div>
 
-    <div id="PhraseContainer"class="container">
+    <div id="PhraseContainer">
         <div id="TextBox"class="box">
             
         </div>
