--- a/API_WEB/Main_Directory/static/css/custom.css
+++ b/API_WEB/Main_Directory/static/css/custom.css
@@ -15,6 +15,10 @@
     font-size: 1.5vw;
 }
 
+.btn:hover{
+    background-color: #5f0087;
+}
+
 #PhraseContainer{
     margin-top: 22vh;
     height: 80vh;
@@ -34,7 +38,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
 }
 
 .texto{
